--- a/ICPP-19/communications.bib
+++ b/ICPP-19/communications.bib
@@ -378,3 +378,15 @@ eprint = {https://doi.org/10.1287/opre.12.5.655},
     doi="10.1007/BF00130708",
     url="https://doi.org/10.1007/BF00130708"
 }
+
+@article{NWChem,
+title = "NWChem: A comprehensive and scalable open-source solution for large scale molecular simulations",
+journal = "Computer Physics Communications",
+volume = "181",
+number = "9",
+pages = "1477 - 1489",
+year = "2010",
+issn = "0010-4655",
+doi = "https://doi.org/10.1016/j.cpc.2010.04.018",
+url = "http://www.sciencedirect.com/science/article/pii/S0010465510001438",
+}
